[gd_scene load_steps=76 format=3 uid="uid://cnjdgbay82ats"]

[ext_resource type="Script" path="res://scripts/enemy_ambush.gd" id="1_v7v1j"]
[ext_resource type="Texture2D" uid="uid://cafix4hj4xwcx" path="res://art/Ambush/Ambush_coming_out_of_puddle_sprite.png" id="2_2e53y"]
[ext_resource type="Texture2D" uid="uid://d0mupf6lxyq7a" path="res://art/Ambush/Ambush_Idle_v3.png" id="2_d1hei"]
[ext_resource type="Texture2D" uid="uid://dpfroyuqqx3gt" path="res://art/Ambush/Ambush_Attack_Normal_done_1.png" id="2_ruuvt"]
[ext_resource type="Texture2D" uid="uid://dtnn7hofg0qn2" path="res://art/Ambush/puddles_nothing_sprite.png" id="3_yw0pk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k5836"]
atlas = ExtResource("2_ruuvt")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lm4x"]
atlas = ExtResource("2_ruuvt")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbvwd"]
atlas = ExtResource("2_ruuvt")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2hsc"]
atlas = ExtResource("2_ruuvt")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e6vb"]
atlas = ExtResource("2_ruuvt")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwtv1"]
atlas = ExtResource("2_ruuvt")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7do7u"]
atlas = ExtResource("2_ruuvt")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3toe"]
atlas = ExtResource("2_ruuvt")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn4ok"]
atlas = ExtResource("2_ruuvt")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6k62"]
atlas = ExtResource("2_ruuvt")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vxkr"]
atlas = ExtResource("2_ruuvt")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ph2k"]
atlas = ExtResource("2_ruuvt")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s14n8"]
atlas = ExtResource("2_ruuvt")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhnfx"]
atlas = ExtResource("2_ruuvt")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_44crb"]
atlas = ExtResource("2_ruuvt")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_avd22"]
atlas = ExtResource("2_ruuvt")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lb2b"]
atlas = ExtResource("2_ruuvt")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu8jk"]
atlas = ExtResource("2_ruuvt")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oadce"]
atlas = ExtResource("2_ruuvt")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiu24"]
atlas = ExtResource("2_ruuvt")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_267dq"]
atlas = ExtResource("2_ruuvt")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pna47"]
atlas = ExtResource("2_ruuvt")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjlex"]
atlas = ExtResource("2_ruuvt")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1q7l"]
atlas = ExtResource("2_ruuvt")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iawq0"]
atlas = ExtResource("2_2e53y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsb8l"]
atlas = ExtResource("2_2e53y")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkfad"]
atlas = ExtResource("2_2e53y")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk7ox"]
atlas = ExtResource("2_2e53y")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i53y"]
atlas = ExtResource("2_2e53y")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkvcc"]
atlas = ExtResource("2_2e53y")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_itogq"]
atlas = ExtResource("2_2e53y")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxytr"]
atlas = ExtResource("2_2e53y")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvefq"]
atlas = ExtResource("2_2e53y")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x22ma"]
atlas = ExtResource("2_d1hei")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyn40"]
atlas = ExtResource("2_d1hei")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv752"]
atlas = ExtResource("2_d1hei")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqy6i"]
atlas = ExtResource("2_d1hei")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_he27t"]
atlas = ExtResource("2_d1hei")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy5tn"]
atlas = ExtResource("2_d1hei")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hash0"]
atlas = ExtResource("2_d1hei")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_we0lk"]
atlas = ExtResource("2_d1hei")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyiwy"]
atlas = ExtResource("2_d1hei")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf1jj"]
atlas = ExtResource("2_d1hei")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pevl"]
atlas = ExtResource("2_d1hei")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl4m6"]
atlas = ExtResource("2_d1hei")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0eyf"]
atlas = ExtResource("2_d1hei")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsjd0"]
atlas = ExtResource("2_d1hei")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydpfj"]
atlas = ExtResource("2_d1hei")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5b30"]
atlas = ExtResource("2_d1hei")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhj8c"]
atlas = ExtResource("2_d1hei")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_44awj"]
atlas = ExtResource("2_d1hei")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_64oae"]
atlas = ExtResource("2_d1hei")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md85m"]
atlas = ExtResource("2_d1hei")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp4kx"]
atlas = ExtResource("2_d1hei")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x1aq"]
atlas = ExtResource("2_d1hei")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y62o2"]
atlas = ExtResource("2_d1hei")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bghrp"]
atlas = ExtResource("2_d1hei")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h271o"]
atlas = ExtResource("3_yw0pk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g881d"]
atlas = ExtResource("3_yw0pk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_burgd"]
atlas = ExtResource("3_yw0pk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6ivu"]
atlas = ExtResource("3_yw0pk")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3heqs"]
atlas = ExtResource("3_yw0pk")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm3j1"]
atlas = ExtResource("3_yw0pk")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_78yjl"]
atlas = ExtResource("3_yw0pk")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg5h1"]
atlas = ExtResource("3_yw0pk")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs4x0"]
atlas = ExtResource("3_yw0pk")
region = Rect2(64, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kvm55"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5836")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lm4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbvwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2hsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e6vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwtv1")
}],
"loop": true,
"name": &"Atk D",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7do7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3toe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn4ok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6k62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vxkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ph2k")
}],
"loop": true,
"name": &"Atk L",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s14n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhnfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44crb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avd22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lb2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu8jk")
}],
"loop": true,
"name": &"Atk R",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oadce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiu24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_267dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pna47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjlex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1q7l")
}],
"loop": true,
"name": &"Atk U",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"Chase D",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Chase L",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Chase R",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Chase U",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iawq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsb8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkfad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk7ox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i53y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkvcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itogq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxytr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvefq")
}],
"loop": false,
"name": &"Emerge",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x22ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyn40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv752")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqy6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he27t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy5tn")
}],
"loop": true,
"name": &"Idle D",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hash0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we0lk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyiwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf1jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pevl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sl4m6")
}],
"loop": true,
"name": &"Idle L",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0eyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsjd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydpfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5b30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhj8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44awj")
}],
"loop": true,
"name": &"Idle R",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64oae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md85m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp4kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x1aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y62o2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bghrp")
}],
"loop": true,
"name": &"Idle U",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h271o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g881d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_burgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6ivu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3heqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm3j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78yjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg5h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs4x0")
}],
"loop": true,
"name": &"Puddle",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mmxi8"]
radius = 15.0
height = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_eojq4"]
radius = 39.0128

[sub_resource type="CircleShape2D" id="CircleShape2D_lkihw"]
radius = 57.0088

[node name="Enemy_Ambush" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_v7v1j")

[node name="Animation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kvm55")
animation = &"Chase D"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_mmxi8")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="Hurtbox" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_eojq4")

[node name="Detect Zone" type="Area2D" parent="."]
position = Vector2(21, 0)

[node name="Trigger Sphere" type="CollisionShape2D" parent="Detect Zone"]
position = Vector2(-21, 0)
shape = SubResource("CircleShape2D_lkihw")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_hurtbox_body_exited"]
[connection signal="body_entered" from="Detect Zone" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
